--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -16,7 +16,7 @@
                             <hr class="star-primary">
                             <div class="row">
                                 <div class="slider">
-                                    <div style="margin-top:100px"></div>
+                                    <!--<div style="margin-top:100px"></div> !-->
                                     {% for img in post.imgs %}
                                     <input type="radio" name="slide_switch" id="{{ img.id }}" checked/>
                                     <label for="{{ img.id }}">
