--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -26,7 +26,7 @@
                                     {% endfor %}
                                 </div>
                             </div>
-                            <p>{{ post.description }}</p>
+                            <p style="margin-top:10px">{{ post.description }}</p>
                             <ul class="list-inline item-details">
                                 <li>Date:
                                     <strong><a href="http://startbootstrap.com">{{ post.project-date }}</a>
