--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -386,7 +386,6 @@ footer .footer-below {
 }
 
 .portfolio-modal .modal-content {
-    padding: 100px 0;
     min-height: 100%;
     border: 0;
     border-radius: 0;
@@ -470,8 +469,15 @@ footer .footer-below {
     position: absolute;
     left: 0; top: 0;
     transition: all 0.5s;
-    
+
     box-shadow: 0 10px 20px #888888;
+}
+
+@media (max-width: 767px) {
+    .slider {
+        width: 100%;
+        height: auto;
+    }
 }
 
 .slider input[name='slide_switch'] {
@@ -488,6 +494,8 @@ footer .footer-below {
     
     /*Default style = low opacity*/
     opacity: 0.6;
+
+    float: left;
 }
 
 .slider label img{
