--- a/_includes/portfolio_page.html
+++ b/_includes/portfolio_page.html
@@ -17,18 +17,8 @@
                 </div>
             </div>
             <div class="row">
-                <p style="margin-top:10px" align="justify">{{ page.content }}</p>
+                <p style="margin-top:10px" align="justify">{{ page.content | markdownify }}</p>
             </div>
-            <ul class="list-inline item-details">
-                <li>Prev:
-                    <strong>{{ page.prev }}</a>
-                    </strong>
-                </li>
-                <li>Next:
-                    <strong>{{ page.next }}</a>
-                    </strong>
-                </li>
-            </ul>
         </div>
     </div>
 </div>
