--- a/_includes/portfolio_page.html
+++ b/_includes/portfolio_page.html
@@ -16,7 +16,7 @@
                     {% endfor %}
                 </div>
             </div>
-            <div class="row">
+            <div class="row" align="justify">
                 <p style="margin-top:10px" align="justify">{{ page.content | markdownify }}</p>
             </div>
         </div>
