--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,19 +1,34 @@
  <!-- About Section -->
-    <section class="success" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-light">
-                </div>
+ <section class="success" id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>About Us</h2>
+                <hr class="star-light">
             </div>
-            <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Tamatin Studio merupakan Studio yang fokus dalam pengembangan game. Dibangun pada 2013</p>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-lg-offset-2">
+                <p align="center">Tamatin Studio merupakan Studio yang fokus dalam pengembangan game.<br><br>Dibangun pertama kali untuk mengikuti suatu perlombaan game development oleh dua mahasiswa yang memiliki passion tinggi dalam pengembangan game.<br><br>Sejak saat itu kami selalu mencoba berinovasi dalam pengembangan game dan terus berkembang untuk menghasilkan produk terbaik.</p>
+            </div>
+            <div class="col-lg-4">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <img src="img/yanuar.png">
+                    </div>
+                    <div class="col-lg-6">
+                        <h3>Yanuar Aristya Edy Putra</h3>
+                    </div>
                 </div>
-                <div class="col-lg-4">
-                    <p>Lorem ipsum dolor sir amet</p>
+                <div class="row" style="margin-top:30px">
+                    <div class="col-lg-6">
+                        <img src="img/yodi.png">
+                    </div>
+                    <div class="col-lg-6">
+                        <h3>Yodi Pramudito</h3>
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
